--- a/frontend/src/Styles/main.css
+++ b/frontend/src/Styles/main.css
@@ -4,4 +4,42 @@
     margin: 0;
     padding: 0;
     background-color: rgb(41, 40, 47);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.fade-in {
+    color: white;
+    font-weight: 300;
+    margin-top: 13rem;
+    animation: fadeIn ease 1s;
+    -webkit-animation: fadeIn ease 1s;
+    -moz-animation: fadeIn ease 1s;
+    -o-animation: fadeIn ease 1s;
+    -ms-animation: fadeIn ease 1s;
+    }
+    @keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+    }
+    
+    @-moz-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+    }
+    
+    @-webkit-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+    }
+    
+    @-o-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+    }
+    
+    @-ms-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+    }
