--- a/frontend/src/Styles/main.css
+++ b/frontend/src/Styles/main.css
@@ -1,12 +1,31 @@
 .container{
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
     background-color: rgb(41, 40, 47);
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.article-wrapper{
+    margin: 1rem auto;
+    width: 80vw;
+    display: block;
+    margin-top: 1rem;
+    
+}
+
+.bg{
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(41, 40, 47);
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
 }
 
 .fade-in {
